# data-challenge-mlops

./: .env  .env.exemple  .gitignore  ARCHITECTURE.md  Dockerfile  Dockerfile.airflow  Dockerfile.api  Dockerfile.webapp  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
airflow_dev/dags/: training_pipeline.py
api/: main.py
k8s/: api-deployment.yaml  api-service.yaml  namespace.yaml  secrets.example.yaml  secrets.yaml  webapp-deployment.yaml  webapp-service.yaml
mlruns/0/: meta.yaml
mlruns/360039384436191630/: meta.yaml
mlruns/360039384436191630/0bc91ba9c7aa497e8125c2ba10d71a73/: meta.yaml
mlruns/360039384436191630/0bc91ba9c7aa497e8125c2ba10d71a73/metrics/: inertia  silhouette_score
mlruns/360039384436191630/0bc91ba9c7aa497e8125c2ba10d71a73/tags/: mlflow.log-model.history  mlflow.runName  mlflow.source.name
mlruns/360039384436191630/1a99f5c2829d462ab955cd5e06dc8cab/: meta.yaml
mlruns/360039384436191630/1a99f5c2829d462ab955cd5e06dc8cab/metrics/: inertia  (+1 more)
mlruns/360039384436191630/3b5b279adeeb4e23bd674582c2f475d7/: meta.yaml
mlruns/360039384436191630/41077cbd8ae8454381cb9c5fbdf34129/: meta.yaml
mlruns/360039384436191630/495647ad13054e3b90acf271d633552d/: meta.yaml
mlruns/360039384436191630/78adf312ef7c460aad8c0379e13024f9/: meta.yaml
mlruns/360039384436191630/833e38aa53884d6fb8847bcc669d29fd/: meta.yaml
mlruns/360039384436191630/943b5cc946ad420095efa7ca64e36db3/: meta.yaml
mlruns/360039384436191630/a91889c6d1dd4352b13f1b4864183309/: meta.yaml
mlruns/360039384436191630/b3577c9abacb4771b5d30f8f82812163/: meta.yaml
mlruns/360039384436191630/ba77f600e2a943be8e6e02f1cb80721e/: meta.yaml
mlruns/360039384436191630/bdd8e68e211243c28d54dd2b903532f3/: meta.yaml
mlruns/360039384436191630/d2a49d152d0e43b4b0fbb4076ec6b220/: meta.yaml
mlruns/360039384436191630/db6466bfb79d41009ac0c8fd246e11f2/: meta.yaml
mlruns/360039384436191630/ddf10e5f935d4b54971931d98258ff4c/: meta.yaml
mlruns/360039384436191630/e57e4a17dc994c6bb145fbaef46f4738/: meta.yaml
mlruns/360039384436191630/ed7f9172c9bc41cf8ac6f7c27aeb00c8/: meta.yaml
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: api-monitoring.json
notebooks/: visualisation_clustering.ipynb
notebooks/mlruns/0/: meta.yaml
src/: data.py  predict.py  train.py
tests/: test_api.py  test_data.py  test_model.py  test_predict.py  test_train.py
webapp/: app.py
(+91 files in other folders)
