[tool.poetry]
name = "data-challenge-mlops"
version = "0.1.0"
description = ""
authors = ["Alexandre Mathias Donnat, Lounis Hamroun, Leo Ivars, Omar Fekih, Anne Faury"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ucimlrepo = "^0.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
