[tool.poetry]
name = "data-challenge-mlops"
version = "0.1.0"
description = ""
authors = ["Alexandre Mathias Donnat, Lounis Hamroun, Leo Ivars, Omar Fekih, Anne Faury"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
ucimlrepo = "^0.0.7"
scikit-learn = "1.6.1"
pandas = "2.2.3"
numpy = "2.2.3"
joblib = "1.4.2"
mlflow = "2.21.0"
pytest = "8.3.4"
seaborn = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.2.0,<8.0.0)"
]
